2007-03-22 [colin]	2.8.1cvs39

	* src/prefs_filtering.c
	* src/gtk/combobox.h
		Fix escaping account names in filtering prefs

2007-03-22 [colin]	2.8.1cvs38

	* src/addrindex.c
	* src/ldapctrl.h
	* src/ldapquery.c
		Add any attribute specified in LDAP servers'
		Search attributes to the Other Attributes tab
		of contacts; Add 'telephoneNumber' in the
		default list.

2007-03-22 [colin]	2.8.1cvs37

	* src/folderview.c
	* src/folderview.h
	* src/mainwindow.c
		Try to prevent race conditions when
		changing the folder list
	* src/summaryview.c
		Fix possible red folder icon when
		switching from Small screen layout
		to any other

2007-03-22 [colin]	2.8.1cvs36

	* src/mainwindow.c
	* src/mainwindow.h
	* src/summaryview.c
		Rename "little screen" to "Small screen"
	* src/gtk/Makefile.am
	* src/common/utils.c
	* src/mh.c
		Fix Maemo-related compilation problems

2007-03-21 [colin]	2.8.1cvs35

	* configure.ac
		Fix previous commit
	* claws-mail.desktop
		Remove .png from the Icon, it's useless

2007-03-21 [colin]	2.8.1cvs34

	* configure.ac
	* src/Makefile.am
		Add the necessary lib checking for 
		Maemo

2007-03-21 [colin]	2.8.1cvs33

	* src/main.c
		Fix unconditional "error happened" when
		sending via command-line. "lol @ myself"

2007-03-21 [colin]	2.8.1cvs32

	* claws-mail-40x40.png
	* claws-mail-26x26.png
	* src/account.c
	* src/addressbook.c
	* src/compose.c
	* src/folderview.c
	* src/folderview.h
	* src/main.c
	* src/mainwindow.c
	* src/mainwindow.h
	* src/messageview.c
	* src/prefs_account.c
	* src/prefs_common.c
	* src/summary_search.c
	* src/summaryview.c
	* src/summaryview.h
	* src/gtk/authors.h
	* src/gtk/gtkutils.c
	* src/gtk/gtkutils.h
	* src/gtk/logwindow.c
	* src/gtk/menu.c
	* src/gtk/prefswindow.c
		Add Maemo port (patch mainly by Jean-Luc Biort)
		Add a new 'Little screen' layout to help on such
		platforms (patch by me)
		Make some default preferences different (more
		adapted) on Maemo (patch by me)

2007-03-21 [wwp]	2.8.1cvs31
