@@ -1040,8 +1040,12 @@ static gint wait_for_children(Children *children)
 	if (children->nb)
 		return FALSE;
 
-	if (!children->dialog)
+	if (!children->dialog) {
 		free_children(children);
+	} else if (!children->output
+			&& (children->action_type & (ACTION_PIPE_OUT | ACTION_INSERT))) {
+		gtk_widget_destroy(children->dialog);
+	}
 
 	return FALSE;
 }
