@@ -1,3 +1,9 @@
+2007-03-22 [wwp]	2.8.1cvs40
+
+	* src/action.c
+		Fix sticky action dialog when got no output but action command
+		is pipe'ing out or inserting (introduced w/ 2.8.1cvs19).
+
 2007-03-22 [colin]	2.8.1cvs39
 
 	* src/prefs_filtering.c
